--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "twilio": "^5.5.0",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
